<resources>
    <string name="app_name">My material design</string>
    <string name="title_activity_login">Sign in</string>
    <string name="close_text_button">Close</string>
    <string name="login_text_button">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Professor Brain</string>
    <string name="nav_header_subtitle">pf.brain@google.com</string>
    <string name="nav_header_desc">User pic</string>
    <string name="action_settings">Settings</string>

    <string name="menu_fruits">Fruits</string>
    <string name="menu_vegetables">Vegetables</string>
    <string name="menu_nature">Nature</string>
    <string name="picture_fruits">Picture fruits</string>
    <string name="picture_vegetables">Picture vegetables</string>
    <string name="picture_nature">Picture nature</string>
    <string name="show_progressbar">Show PB</string>
    <string name="hide_progressbar">Hide PG</string>
    <string name="fruits_article">Исследователи из Уорикского университета продемонстрировали, что употребление больших количеств фруктов и овощей способствует повышению уровня счастья. При этом он может быть сравним с увеличением благополучия от нахождения работы. Статья ученых опубликована в American Journal of Public Health.
    В ходе исследования был изучен образ питания 12 тысяч случайно выбранных людей, которые вели диетические дневники, и их психологическое состояние. Участники долговременного исследования The Household, Income and Labour Dynamics in Australia Survey (HILDA) указывали, какие продукты они употребляли каждый день и в каких количествах.
    Были собраны данные о питании за 2007, 2009 и 2013 годы. Они сверялись с ответами о психологическом состоянии. При этом учитывались изменения в доходах и личных обстоятельствах, которые также могли повлиять на уровень счастья.
    Оказалось, что каждая дополнительная ежедневная порция фруктов и овощей положительно влияет на уровень счастья. По словам ученых, этот эффект гораздо сильнее, чем благоприятное воздействие на здоровье. Возможное объяснение этого — каротиноиды, содержащиеся во фруктах и овощах, которые могут влиять на окислительно-восстановительный баланс в организме человека. Он, в свою очередь, может воздействовать на уровень гормонов.
    Исследователи считают, что люди не стремятся изменить свое питание, поскольку здоровый образ жизни не приносит сиюминутного результата. Однако психологическое благополучие может улучшаться достаточно быстро для того, чтобы это мотивировало людей к пересмотру своей диеты.
    Полученные результаты могут быть использованы специалистами в области здравоохранения, чтобы убедить людей переходить на здоровое питание, отмечается в статье.
    </string>
    <string name="picture_of_recyclerview">Picture of RecyclerView</string>
    <string name="orange_theme">Orange theme</string>
    <string name="purple_theme">Purple theme</string>

</resources>
