<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/show_progressBar"
        android:orderInCategory="100"
        android:title="@string/show_progressbar"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_arrow_upward"/>
    <item
        android:id="@+id/hide_progressBar"
        android:orderInCategory="200"
        android:title="@string/hide_progressbar"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_arrow_downward"/>

    <item
        android:id="@+id/apply_theme_orange"
        android:orderInCategory="230"
        android:title="@string/orange_theme"
        app:showAsAction="never"/>

    <item
        android:id="@+id/apply_theme_purple"
        android:orderInCategory="270"
        android:title="@string/purple_theme"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_activity_bottom"
        android:orderInCategory="400"
        android:title="Bottom activity"
        app:showAsAction="never" />
</menu>
